<resources>
    <string name="app_name">CCRun</string>
    <string name="action_settings">Settings</string>
    <string name="tab1">Principal</string>
    <string name="tab2">Listas</string>
    <string name="tab3">Resumen</string>
    <string name="tab4">Calendario</string>
    <string name="setting">setting</string>
    <string name="perfil">perfil</string>
    <string name="pantalla_setting">Pantalla setting</string>
    <string name="distancia">Distancia</string>
    <string name="calorias">Calorías</string>
    <string name="tiempo">Tiempo</string>
    <string name="graficas">Gráficas</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="altura">Altura (cm)</string>
    <string name="peso">Peso</string>
    <string name="startStopButton">Start/Stop</string>
    <string name="sexo">Sexo</string>
    <string name="fotoPerfil">Foto de perfil</string>
    <string name="nombreruta">NombreRuta</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <array name="listColor">
        <item>Azul</item>
        <item>Blanco</item>
        <item>Verde</item>
    </array>
</resources>
