<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom">
    <LinearLayout android:id="@+id/botones" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true" style="@android:style/ButtonBar"
        android:gravity="bottom">

        <Button android:id="@+id/principal" android:layout_width="wrap_content"
            android:layout_height="match_parent" android:layout_weight="1"
            android:text="@string/tab1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button android:id="@+id/listaRutas" android:layout_width="wrap_content"
            android:layout_height="match_parent" android:layout_weight="1"
            android:text="@string/tab2"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/resumen"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab3" />

        <Button android:id="@+id/calendario" android:layout_width="wrap_content"
            android:layout_height="match_parent" android:layout_weight="1"
            android:text="@string/tab4"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
